--- a/index.html
+++ b/index.html
@@ -17,6 +17,152 @@
         <script src="js/main.js"></script>
     </head>
     <body>
+        <header>
+            <h1>
+                <a href="index.html"><!--★-->
+                    <img src="img/logo.svg" alt="Furniture Design">
+                </a>
+            </h1>
+            <nav>
+                三
+            </nav>
+        </header>
+        <main>
+            <div id="top">
+                <ul>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item1.html">
+                            <img src="img/item1.jpg" alt="item1">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item2.html">
+                            <img src="img/item2.jpg" alt="item2">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item3.html">
+                            <img src="img/item3.jpg" alt="item3">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item4.html">
+                            <img src="img/item4.jpg" alt="item4">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item5.html">
+                            <img src="img/item5.jpg" alt="item5">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item6.html">
+                            <img src="img/item6.jpg" alt="item6">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item7.html">
+                            <img src="img/item7.jpg" alt="item7">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item8.html">
+                            <img src="img/item8.jpg" alt="item8">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item9.html">
+                            <img src="img/item9.jpg" alt="item9">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item10.html">
+                            <img src="img/item10.jpg" alt="item10">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item11.html">
+                            <img src="img/item11.jpg" alt="item11">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item12.html">
+                            <img src="img/item12.jpg" alt="item12">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item13.html">
+                            <img src="img/item13.jpg" alt="item13">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item14.html">
+                            <img src="img/item14.jpg" alt="item14">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item15.html">
+                            <img src="img/item15.jpg" alt="item15">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                    <li>
+                        <!-- linkを貼る -->
+                        <a href="item1.html">
+                            <img src="img/item1.jpg" alt="item1">
+                        </a>
+                        <p>プロダクトタイトルプロダクトタイトル</p>
+                        <p>￥99,999 +tax</p>
+                    </li>
+                </ul>
+            </div>
+        </main>
+        <footer>
 
+        </footer>
     </body>
 </html>
