gridの作成+item1のテンプレ完成

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        <header>
-            <h1>
+        <header class="wrapper">
+            <h1 class="site-title">
                 <a href="index.html"><!--★-->
                     <img src="img/logo.svg" alt="Furniture Design">
                 </a>
@@ -28,8 +28,8 @@
             </nav>
         </header>
         <main>
-            <div id="top">
-                <ul>
+            <div id="top" class="wrapper">
+                <ul class="product-list">
                     <li>
                         <!-- linkを貼る -->
                         <a href="item1.html">
@@ -161,7 +161,12 @@
                 </ul>
             </div>
         </main>
-        <footer>
+        <footer id="footer" class="wrapper">
+            <ul class="menu">
+                <li>INSTAGRAM</li>
+                <li>TWITTER</li>
+                <li>FACEBOOK</li>
+            </ul>
 
         </footer>
     </body>
