--- a/item1.html
+++ b/item1.html
@@ -17,6 +17,26 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-
+            <h1 class="site-title">
+                <a href="index.html"><!--★-->
+                    <img src="img/logo.svg" alt="Furniture Design">
+                </a>
+            </h1>
+            <main>
+                <div>
+                    <h1 class="prodocu-title1">
+                        プロダクトタイトル
+                    </h1>
+                        <div class="contents">
+                            <!-- 写真 -->
+                            <div class="image"><img src="img/item1.jpg" alt="item-1"></div>
+                            <div class="text">テキストテキストテキストテキストテキストテキスト<br>
+                            テキストテキストテキストテキストテキストテキスト<br>
+                            テキストテキストテキストテキストテキストテキスト<br>
+                            テキストテキストテキストテキストテキストテキスト</div>
+                        </div>
+                    
+                </div>
+            </main>
     </body>
 </html>
