itemのhtmlの骨格を作成した

--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
                         </a>
                     </li>
                 </ul>
+                <a class="link-text" href="products.html">View More</a>
             </div>
+            
         </main>
         <footer id="footer" class="wrapper">
             <ul class="menu">
