--- a/item1.html
+++ b/item1.html
@@ -17,26 +17,38 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-            <h1 class="site-title">
-                <a href="index.html"><!--★-->
-                    <img src="img/logo.svg" alt="Furniture Design">
-                </a>
-            </h1>
+            <header class="wrapper">
+                <h1 class="site-title">
+                    <a href="index.html"><!--★-->
+                        <img src="img/logo.svg" alt="Furniture Design">
+                    </a>
+                </h1>
+                <nav>
+                    三
+                </nav>
+            </header>
             <main>
-                <div>
-                    <h1 class="prodocu-title1">
+                <div class="content wrapper">
+                    <h1 class="page-title">
                         プロダクトタイトル
                     </h1>
-                        <div class="contents">
+                        <div class="item">
                             <!-- 写真 -->
-                            <div class="image"><img src="img/item1.jpg" alt="item-1"></div>
-                            <div class="text">テキストテキストテキストテキストテキストテキスト<br>
-                            テキストテキストテキストテキストテキストテキスト<br>
-                            テキストテキストテキストテキストテキストテキスト<br>
-                            テキストテキストテキストテキストテキストテキスト</div>
+                            <div class="item-image"><img src="img/item1.jpg" alt="item-1"></div>
+                            <div class="item-text">
+                                
+                            </div>
                         </div>
-                    
+                    <a class='link-text' href="products.html">Back to Product</a>
                 </div>
             </main>
+                    <footer id="footer" class="wrapper">
+            <ul class="menu">
+                <li>INSTAGRAM</li>
+                <li>TWITTER</li>
+                <li>FACEBOOK</li>
+            </ul>
+
+        </footer>
     </body>
 </html>
