itemとHTMLの内容を記述した

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        <header class="wrapper">
+        <header id="header" class="wrapper">
             <h1 class="site-title">
                 <a href="index.html"><!--★-->
                     <img src="img/logo.svg" alt="Furniture Design">
