--- a/item1.html
+++ b/item1.html
@@ -17,7 +17,7 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-            <header class="wrapper">
+            <header  id = "header"class="wrapper">
                 <h1 class="site-title">
                     <a href="index.html"><!--★-->
                         <img src="img/logo.svg" alt="Furniture Design">
@@ -30,17 +30,42 @@
             <main>
                 <div class="content wrapper">
                     <h1 class="page-title">
-                        プロダクトタイトル
+                        NATURAL FLOW CHAIR
                     </h1>
                         <div class="item">
                             <!-- 写真 -->
                             <div class="item-image"><img src="img/item1.jpg" alt="item-1"></div>
                             <div class="item-text">
-                                
+                                <p>
+                                木の温もりとシンプルなデザインが調和した、日常使いに最適なチェアです。  
+                                無駄を省いたフォルムは空間を選ばず、ダイニングやワークスペースなど<br> 
+                                さまざまなシーンに自然となじみます。座る人の動きを妨げない、すっきりとした佇まいが魅力です。
+                                </p>
+                                <p>
+                                    背中にやさしくフィットする背もたれと、安定感のある座面設計により、
+                                    長時間座っても疲れにくい座り心地を実現しました。毎日の食事や作業時間を、<br>
+                                    快適で心地よいひとときに変えてくれる一脚です
+                                </p>
+                                <p>￥178,890+tax</p>
+                                <table>
+                                    <tr>
+                                        <td>SIZE</td>
+                                        <td>W999×W999×W999</td>
+                                    </tr>
+                                    <tr>
+                                        <td>COLOR</td>
+                                        <td>ブラック</td>
+                                    </tr>
+                                    <tr>
+                                        <td>MATERIAL</td>
+                                        <td>プラスチック/木</td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                     <a class='link-text' href="products.html">Back to Product</a>
                 </div>
+               
             </main>
                     <footer id="footer" class="wrapper">
             <ul class="menu">
