itemのpc画面での見た目を整えた

--- a/item1.html
+++ b/item1.html
@@ -43,21 +43,21 @@
                                 </p>
                                 <p>
                                     背中にやさしくフィットする背もたれと、安定感のある座面設計により、
-                                    長時間座っても疲れにくい座り心地を実現しました。毎日の食事や作業時間を、<br>
+                                    長時間座っても疲れにくい座り心地を実現しました。毎日の食事や作業時間を、
                                     快適で心地よいひとときに変えてくれる一脚です
                                 </p>
                                 <p>￥178,890+tax</p>
                                 <table>
                                     <tr>
-                                        <td>SIZE</td>
+                                        <td>SIZE:</td>
                                         <td>W999×W999×W999</td>
                                     </tr>
                                     <tr>
-                                        <td>COLOR</td>
+                                        <td>COLOR:</td>
                                         <td>ブラック</td>
                                     </tr>
                                     <tr>
-                                        <td>MATERIAL</td>
+                                        <td>MATERIAL:</td>
                                         <td>プラスチック/木</td>
                                     </tr>
                                 </table>
