スマホ画面対応完了

--- a/item1.html
+++ b/item1.html
@@ -38,7 +38,7 @@
                             <div class="item-text">
                                 <p>
                                 木の温もりとシンプルなデザインが調和した、日常使いに最適なチェアです。  
-                                無駄を省いたフォルムは空間を選ばず、ダイニングやワークスペースなど<br> 
+                                無駄を省いたフォルムは空間を選ばず、ダイニングやワークスペースなど 
                                 さまざまなシーンに自然となじみます。座る人の動きを妨げない、すっきりとした佇まいが魅力です。
                                 </p>
                                 <p>
