--- a/company.html
+++ b/company.html
@@ -17,6 +17,50 @@
         <script src="js/main.js"></script>
     </head>
     <body>
+            <header  id = "header"class="wrapper">
+                <h1 class="site-title">
+                    <a href="index.html"><!--★-->
+                        <img src="img/logo.svg" alt="Furniture Design">
+                    </a>
+                </h1>
+                <nav>
+                    三
+                </nav>
+            </header>
+            <main>
+                <div>
+                    <h1 class="page-title">Company</h1>
+                    <div id="company">
+                        <dl>
+                            <dt>社名</dt>
+                            <dt>株式会社ファニチャーデザイン</dt>
+                            <dt></dt>
+                            <dt></dt>
+                            <dt></dt>
+                            <dt></dt>
+                            <dt></dt>
+                            <dt></dt>
+                            <dt></dt>
+                            <dt></dt>
+                            <dt></dt>
+                            <dt></dt>
+                        </dl>
+                        <!-- ccsのいじり-->
+                        <!-- dl {
+                            display: flex;
+                            flex-wrap: wrap;
+                            width: 100%;
+                            } -->
+                    </div>
+                </div>
+            </main>
+            <footer id="footer" class="wrapper">
+            <ul class="menu">
+                <li>INSTAGRAM</li>
+                <li>TWITTER</li>
+                <li>FACEBOOK</li>
+            </ul>
 
+            </footer>
     </body>
 </html>
