companyの骨組み作成

--- a/company.html
+++ b/company.html
@@ -28,23 +28,26 @@
                 </nav>
             </header>
             <main>
-                <div>
-                    <h1 class="page-title">Company</h1>
+                <div class="content wrapper">
+                    <h1 class="page-title">Company</h1> 
                     <div id="company">
-                        <dl>
+                        <table class="info">
                             <dt>社名</dt>
                             <dt>株式会社ファニチャーデザイン</dt>
+                            <dt>住所</dt>
+                            <dt>〒107-0062 東京都港区南青山1丁目×××××</dt>
+                            <dt>設立</dt>
+                            <dt>××××年　××月</dt>
+                            <dt>資本金</dt>
+                            <dt>××××万年</dt>
                             <dt></dt>
                             <dt></dt>
                             <dt></dt>
                             <dt></dt>
-                            <dt></dt>
-                            <dt></dt>
-                            <dt></dt>
-                            <dt></dt>
-                            <dt></dt>
-                            <dt></dt>
-                        </dl>
+                        </table>
+                        <div class="map">
+
+                        </div>
                         <!-- ccsのいじり-->
                         <!-- dl {
                             display: flex;
