companyがおおまかに完成

--- a/company.html
+++ b/company.html
@@ -32,21 +32,37 @@
                     <h1 class="page-title">Company</h1> 
                     <div id="company">
                         <table class="info">
-                            <dt>社名</dt>
-                            <dt>株式会社ファニチャーデザイン</dt>
-                            <dt>住所</dt>
-                            <dt>〒107-0062 東京都港区南青山1丁目×××××</dt>
-                            <dt>設立</dt>
-                            <dt>××××年　××月</dt>
-                            <dt>資本金</dt>
-                            <dt>××××万年</dt>
-                            <dt></dt>
-                            <dt></dt>
-                            <dt></dt>
-                            <dt></dt>
+                            <tr>
+                                <th>社名</th>
+                                <td>株式会社ファニチャーデザイン</td>
+                            </tr>
+                            <tr> 
+                                <th>住所</th>
+                                <td>〒107-0062 東京都港区南青山1丁目×××××</td>
+                            </tr>
+                            <tr>
+                                <th>設立</th>
+                                <td>××××年　××月</td>
+                            </tr>
+                            <tr>  
+                                <th>資本金</th>
+                                <td>××××万年</td>
+                            </tr>
+                            <tr>  
+                                <th>従業員数</th>
+                                <td>××名</td>
+                            </tr>
+                            <tr>  
+                                <th>事業内容</th>
+                                <td>家具、インテリアの企画・生産<br>
+                                    家具、インテリアの販売<br>
+                                    店舗の企画・デザイン・設計</dt>
+                                </td>
+                            </tr>
                         </table>
                         <div class="map">
-
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3279.1568171567446!2d136.47601627501484!3d34.72644138183249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60040c875eb9da35%3A0x8b0a0bbbbf770467!2z5pel56Gd44OP44Kk44Km44Ko44O844Ki44Oq44O844OK!5e0!3m2!1sja!2sjp!4v1769652003712!5m2!1sja!2sjp"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                         <!-- ccsのいじり-->
                         <!-- dl {
