--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                     </li>
                 </ul>
                 <a class="link-text" href="products.html">View More</a>
+                <a class="link-text" href="company.html">Company</a>
             </div>
-            
         </main>
         <footer id="footer" class="wrapper">
             <ul class="menu">
