--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     <!-- navの中身 -->
                     <!-- ▲aの閉じがなかった！ -->
                     <ul  class="menu-list">
-                        <li><a href="#">Online Shop</a></li>
-                        <li><a href="#">X(Twitter)</a></li>
-                        <li><a href="#">Youtube</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="company.html">company</a></li>
+                        <li><a href="#">Product</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
