キャラの表情を変える

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <div class="main">
                 <h1 class="site-title">
                     <a href="index.html"><!--★-->
-                        <img src="img/title.png" width="700px" height="auto" alt="Furniture Design">
+                        <img src="img/title.png" alt="Furniture Design">
                     </a>
                 </h1>
                 <!-- キャラクター表示 -->
                 <div class="robot">
-                    <img src="img/Designer.png" width="600px" height="700px" alt="ロボット">
+                    <img src="img/Designer.png"  id="random-img" class="robot-img" alt="ロボット">
                 </div>
             </div>
         <nav>
@@ -195,6 +195,18 @@
                 <a class="link-text" href="products.html">View More</a>
                 <!-- <a class="link-text" href="company.html">Company</a>
             </div> -->
+            <!-- トースト -->
+            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <img src="img/fabicon2.png" width="25px" height="25px" class="rounded me-2" alt="...">
+                        <strong class="me-auto">私の自己紹介サイト</strong>
+                        <small class="text-body-secondary">11 mins ago</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
         </main>
         <footer id="footer" class="wrapper">
             <ul class="menu">
