--- a/index.html
+++ b/index.html
@@ -86,6 +86,31 @@
             </nav>
         </header>
         <main>
+        <div class="flow-wrapper">
+            <div class="flow-container">
+                <div class="flow-card develop">
+                    <span class="num">02</span>
+                    <h3>Develop</h3>
+                    <div class="icon">+</div>
+                </div>
+                <div class="flow-card planning">
+                    <span class="num">03</span>
+                    <h3>Planning</h3>
+                    <div class="icon">+</div>
+                </div>
+                <div class="flow-card design">
+                    <span class="num">01</span>
+                    <h3>Design</h3>
+                    <div class="icon">+</div>
+                </div>
+            </div>
+        </div>
+        <div class="flow-dots">
+            <span class="dot active"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+
             <div id="top" class="wrapper">
                 <h1 class="profile">
                     Contents
