--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- pcとスマホを切り替えるために必ず必要なコード -->
         <meta name ='viewport' content="width=device-width",initial-scale='1'>
         <!-- ★=改造する時に触りたい！ -->
-        <link rel="icon" href="img/fabicon2.png">
+        <link rel="icon" href="img/fabicon_1-3.png">
         <!-- cssリセット　ブラウザによってcssがずれないようにするためのもの-->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <!-- cssの読み込み -->
@@ -15,6 +15,8 @@
         <!--JQUERY-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="js/main.js" defer></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     </head>
     <body>
         <!-- ===== ローディング画面 ===== -->
@@ -26,16 +28,31 @@
             </div>
             <p id="percent">0%</p>
         </div>
-        <!-- !-- ===== メインコンテンツ（最初は非表示） ===== -->
+        <!-- ===== ローディング画面終了 ===== -->
+        <!-- !-- ===== メインコンテンツtop（最初は非表示） ===== -->
         <div id="main-content" class="hidden">
             <header>
                 <h1>Portfolio</h1>
                 <p>自己紹介ページです</p>
             </header>
-            <section class="profile">
+            <!-- <section class="profile">
                 <h2>About Me</h2>
-                <p id="typing-text"></p>
-            </section>
+                <div class="About-icon">+</div>
+                <p id="About-text">
+                    大原簿記情報医療専門学校津校　情報処理科　プログラミングコース2年制に在学しております<br>
+                    小学校から専門学生の今に至るまで、リーダーという役割を担ってきました！
+                </p>
+            </section> -->
+            <div class="accordion-center">
+                <details class="accordion-004">
+                    <summary>これはどのようなテンプレートですか？</summary>
+                    <p>枠線付きのシンプルなアコーディオンメニューです。</p>
+                </details>
+                <details class="accordion-004">
+                    <summary>どのような特徴がありますか？</summary>
+                    <p>クセがなく、どんなサイトでも使いやすい汎用性があります。</p>
+                </details>
+            </div>
             <section class="skills">
                 <h2>Skills</h2>
                 <div class="skill-list">
@@ -43,64 +60,57 @@
                     <div class="skill">CSS</div>
                     <div class="skill">JavaScript</div>
                     <div class="skill">基本情報技術者</div>
+                    <div class="skill">MOS</div>
                 </div>
-            </section> 
+            </section>
+        </div>
         <header id="header" class="wrapper">
             <div class="main">
-                <h1 class="site-title">
-                    <!-- <a href="index.html"><!--★-->
-                        <!-- <img src="img/title.png" alt="Furniture Design">
-                    </a>  -->
-                </h1>
-                <!-- キャラクター表示
-                <div class="robot">
-                    <img src="img/Designer.png"  id="random-img" class="robot-img" alt="ロボット">
-                </div> --         
-            </div>
-        <nav>
-            <!-- 開くボタン -->
-            <button type="button" id="menu-open" class="btn-menu">
-                <!-- ハンバーガ用の三本線 -->
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-                <div id="menu-panel">
-                    <!-- 開いている状態 -->
-                    <!-- 閉じるボタン -->
-                    <button type="button" id="menu-close" class="btn-menu">
+                <nav>
+                    <!-- 開くボタン -->
+                    <button type="button" id="menu-open" class="btn-menu">
+                        <!-- ハンバーガ用の三本線 -->
                         <span></span>
                         <span></span>
                         <span></span>
                     </button>
-                    <!-- navの中身 -->
-                    <!-- ▲aの閉じがなかった！ -->
-                    <ul  class="menu-list">
-                        <li><a href="#">1</a></li>
-                        <li><a href="company.html">company</a></li>
-                        <li><a href="#">Product</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </nav>
+                    <div id="menu-panel">
+                        <!-- 開いている状態 -->
+                        <!-- 閉じるボタン -->
+                        <button type="button" id="menu-close" class="btn-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
+                        <!-- navの中身 -->
+                        <!-- ▲aの閉じがなかった！ -->
+                        <ul  class="menu-list">
+                            <li><a href="#">1</a></li>
+                            <li><a href="company.html">company</a></li>
+                            <li><a href="#">Product</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </header>
         <main>
         <div class="flow-wrapper">
             <div class="flow-container">
                 <div class="flow-card develop">
-                    <span class="num">02</span>
-                    <h3>Develop</h3>
+                    <span class="num">01</span>
+                    <h3>Profile</h3>
                     <div class="icon">+</div>
                 </div>
                 <div class="flow-card planning">
-                    <span class="num">03</span>
-                    <h3>Planning</h3>
+                    <span class="num">02</span>
+                    <h3>今までの経験</h3>
                     <div class="icon">+</div>
                 </div>
                 <div class="flow-card design">
-                    <span class="num">01</span>
-                    <h3>Design</h3>
+                    <span class="num">03</span>
+                    <h3>人生設計</h3>
                     <div class="icon">+</div>
                 </div>
             </div>
@@ -117,17 +127,18 @@
                 </h1>
                 <ul class="product-list fadeIn">
                         <li>
-                            <!-- linkを貼る -->
-                            <a href="item1.html">
-                                <img src="img/1_Seitokai.jpg" alt="item1">
-                            <p>生徒会活動:高校時代</p>
-                            <!-- <p>高校二年生で生徒会を務めました</p> -->
-                            </a>
+                            <div class="item1">
+                                <!-- linkを貼る -->
+                                <a href="item1.html">
+                                <p>生徒会活動:高校時代</p>
+                                <!-- <p>高校二年生で生徒会を務めました</p> -->
+                                </a>
+                            </div>
                         </li>
                         <li>
                             <!-- linkを貼る -->
                             <a href="item2.html">
-                                <img src="img/2_Group.jpeg" alt="item2">
+                                <div class="hidden-image"></div>
                             <p>グループ活動</p>
                             <!-- <p>専門学校で取り組んだグループ活動では、リーダーを務めました</p> -->
                             </a>
@@ -135,7 +146,7 @@
                         <li>
                             <!-- linkを貼る -->
                             <a href="item3.html">
-                                <img src="img/3_Proguraminngu.jpeg" alt="item3">
+                                <div class="hidden-image"></div>
                             <p>プログラミング</p>
                             <!-- <p>現在、html,css,Javascriptを学んでいます。二年時では、PHP,Javaなどを学ぶ予定です。</p> -->
                             </a>
@@ -143,7 +154,7 @@
                         <li>
                             <!-- linkを貼る -->
                             <a href="item4.html">
-                                <img src="img/4_Tyousyo.jpg" alt="item4">
+                                <div class="hidden-image"></div>
                             <p>自分の長所</p>
                             <!-- <p>私の長所は周りを巻き込む力です</p> -->
                             </a>
@@ -151,7 +162,7 @@
                     <li>
                         <!-- linkを貼る -->
                         <a href="item5.html">
-                            <img src="img/5_Sky.jpeg" alt="item5">
+                            <div class="hidden-image"></div>
                         <p>してみたいこと</p>
                         <!-- <p>空を飛んでみたいです。見たことない景色を見てみたい</p> -->
                         </a>
@@ -159,7 +170,7 @@
                     <li>
                         <!-- linkを貼る -->
                         <a href="item6.html">
-                            <img src="img/6_Projekuto.jpeg" alt="item6">
+                            <div class="hidden-image"></div>
                         <p>将来の展望</p>
                         <!-- <p>入社後、5年以内にPMを務めます</p> -->
                         </a>
@@ -167,7 +178,7 @@
                     <li>
                         <!-- linkを貼る -->
                         <a href="item7.html">
-                            <img src="img/7_Apuri.png" alt="item7">
+                            <div class="hidden-image" ></div>
                         <p>将来の展望:二年生での</p>
                         <!-- <p>家計簿自動化アプリを作成したいです</p> -->
                         </a>
@@ -175,81 +186,15 @@
                     <li>
                         <!-- linkを貼る -->
                         <a href="item8.html">
-                            <img src="img/8_Amamiku1.jpg" alt="item8">
+                            <div class="hidden-image"></div>
                         <p>アルバイト</p>
                         <!-- <p>高校二年生の春から、現在まで務めております。創作練り物を扱っているお店で、伊勢はんぺいが有名です</p> -->
                         </a>
                     </li>
-                    <!-- <li>
-                        linkを貼る
-                        <a href="item9.html">
-                            <img src="img/item9.jpg" alt="item9">
-                        <p>プロダクトタイトルプロダクトタイトル</p>
-                        <p>￥99,999 +tax</p>
-                        </a>
-                    </li>
-                    <li>
-                        <!-- linkを貼る
-                        <a href="item10.html">
-                            <img src="img/item10.jpg" alt="item10">
-                        <p>プロダクトタイトルプロダクトタイトル</p>
-                        <p>￥99,999 +tax</p>
-                        </a>
-                    </li>
-                    <li>
-                        linkを貼る
-                        <a href="item11.html">
-                            <img src="img/item11.jpg" alt="item11">
-                        <p>プロダクトタイトルプロダクトタイトル</p>
-                        <p>￥99,999 +tax</p>
-                        </a>
-                    </li>
-                    <li>
-                        linkを貼る
-                        <a href="item12.html">
-                            <img src="img/item12.jpg" alt="item12">
-                        <p>プロダクトタイトルプロダクトタイトル</p>
-                        <p>￥99,999 +tax</p>
-                        </a> -->
-                    <!-- </li>
-                    <li>
-                        linkを貼る
-                        <a href="item13.html">
-                            <img src="img/item13.jpg" alt="item13">
-                        <p>プロダクトタイトルプロダクトタイトル</p>
-                        <p>￥99,999 +tax</p>
-                        </a>
-                    </li>
-                    <li> -->
-                        <!-- linkを貼る -->
-                        <!-- <a href="item14.html">
-                            <img src="img/item14.jpg" alt="item14">
-                        <p>プロダクトタイトルプロダクトタイトル</p>
-                        <p>￥99,999 +tax</p>
-                        </a>
-                    </li> -->
-                    <!-- <li>
-                        linkを貼る -->
-                        <!-- <a href="item15.html">
-                            <img src="img/item15.jpg" alt="item15">
-                        <p>プロダクトタイトルプロダクトタイトル</p>
-                        <p>￥99,999 +tax</p>
-                        </a>
-                    </li>
-                    <li> -->
-                        <!-- linkを貼る -->
-                        <!-- <a href="item16.html">
-                            <img src="img/item16.jpg" alt="item16">
-                        <p>プロダクトタイトルプロダクトタイトル</p>
-                        <p>￥99,999 +tax</p>
-                        </a> -->
-                    <!-- </li> --> 
                 </ul>
                 <a class="link-text" href="products.html">View More</a>
-                <!-- <a class="link-text" href="company.html">Company</a>
-            </div> -->
-            <!-- トースト -->
-            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <!-- トースト仮に実装してる　一旦邪魔だからコメントアウトしている -->
+            <!-- <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-header">
                         <img src="img/fabicon2.png" width="25px" height="25px" class="rounded me-2" alt="...">
                         <strong class="me-auto">私の自己紹介サイト</strong>
@@ -259,7 +204,10 @@
                 <div class="toast-body">
                     Hello, world! This is a toast message.
                 </div>
-            </div>
+            </div> -->
+            <!-- Bootstrap Js読み込み -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         </main>
         <footer id="footer" class="wrapper">
             <ul class="menu">
