--- a/index.html
+++ b/index.html
@@ -126,72 +126,88 @@
                     Contents
                 </h1>
                 <ul class="product-list fadeIn">
-                        <li>
-                            <div class="item1">
-                                <!-- linkを貼る -->
-                                <a href="item1.html">
-                                <p>生徒会活動:高校時代</p>
-                                <!-- <p>高校二年生で生徒会を務めました</p> -->
-                                </a>
+                        <li data-title="生徒会活動:高校時代" 
+                            data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                            data-img="img/1_Seitokai.jpg"> <a href="#">
+                                <div class="item1">
+                                    <p>生徒会活動:高校時代</p>
+                                </div>
+                            </a>
+                        </li>                        
+                        <li data-title="グループ活動" 
+                            data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                            data-img="img/school_activity.jpg"> <a href="#">
+                                <div class="item2">
+                                    <p>グループ活動</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li data-title="プログラミング" 
+                            data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                            data-img="img/school_activity.jpg"> <a href="#">
+                                <div class="item3">
+                                    <p>プログラミング</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li data-title="自分の長所" 
+                            data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                            data-img="img/school_activity.jpg"> <a href="#">
+                                <div class="item4">
+                                    <p>自分の長所</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li data-title="してみたいこと" 
+                            data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                            data-img="img/school_activity.jpg"> <a href="#">
+                                <div class="item5">
+                                    <p>してみたいこと</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li data-title="将来の展望" 
+                            data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                            data-img="img/school_activity.jpg"> <a href="#">
+                                <div class="item5">
+                                    <p>将来の展望</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li data-title="将来の展望:二年生に向けて" 
+                            data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                            data-img="img/school_activity.jpg"> <a href="#">
+                                <div class="item7">
+                                    <p>将来の展望：二年生に向けて</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li data-title="アルバイト" 
+                            data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                            data-img="img/school_activity.jpg"> <a href="#">
+                                <div class="item8">
+                                    <p>アルバイト</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <div id="modal-container" class="modal">
+                        <div class="modal-content">
+                            <span class="close-btn">&times;</span>
+                            
+                            <div id="modal-body" class="modal-flex-container">
+                                <div class="modal-left">
+                                    <img id="modal-img" src="" alt="紹介画像">
+                                </div>
+
+                                <div class="modal-right">
+                                    <h2 id="modal-title"></h2>
+                                    <p id="modal-desc"></p>
+                                </div>
                             </div>
-                        </li>
-                        <li>
-                            <!-- linkを貼る -->
-                            <a href="item2.html">
-                                <div class="hidden-image"></div>
-                            <p>グループ活動</p>
-                            <!-- <p>専門学校で取り組んだグループ活動では、リーダーを務めました</p> -->
-                            </a>
-                        </li>
-                        <li>
-                            <!-- linkを貼る -->
-                            <a href="item3.html">
-                                <div class="hidden-image"></div>
-                            <p>プログラミング</p>
-                            <!-- <p>現在、html,css,Javascriptを学んでいます。二年時では、PHP,Javaなどを学ぶ予定です。</p> -->
-                            </a>
-                        </li>
-                        <li>
-                            <!-- linkを貼る -->
-                            <a href="item4.html">
-                                <div class="hidden-image"></div>
-                            <p>自分の長所</p>
-                            <!-- <p>私の長所は周りを巻き込む力です</p> -->
-                            </a>
-                        </li>
-                    <li>
-                        <!-- linkを貼る -->
-                        <a href="item5.html">
-                            <div class="hidden-image"></div>
-                        <p>してみたいこと</p>
-                        <!-- <p>空を飛んでみたいです。見たことない景色を見てみたい</p> -->
-                        </a>
-                    </li>
-                    <li>
-                        <!-- linkを貼る -->
-                        <a href="item6.html">
-                            <div class="hidden-image"></div>
-                        <p>将来の展望</p>
-                        <!-- <p>入社後、5年以内にPMを務めます</p> -->
-                        </a>
-                    </li>
-                    <li>
-                        <!-- linkを貼る -->
-                        <a href="item7.html">
-                            <div class="hidden-image" ></div>
-                        <p>将来の展望:二年生での</p>
-                        <!-- <p>家計簿自動化アプリを作成したいです</p> -->
-                        </a>
-                    </li>
-                    <li>
-                        <!-- linkを貼る -->
-                        <a href="item8.html">
-                            <div class="hidden-image"></div>
-                        <p>アルバイト</p>
-                        <!-- <p>高校二年生の春から、現在まで務めております。創作練り物を扱っているお店で、伊勢はんぺいが有名です</p> -->
-                        </a>
-                    </li>
-                </ul>
+
+                        </div>
+                    </div>
                 <a class="link-text" href="products.html">View More</a>
             <!-- トースト仮に実装してる　一旦邪魔だからコメントアウトしている -->
             <!-- <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
